# jsk_common_msgs

./: .gitignore  .travis.yml  README.md
.github/workflows/: config.yml
jsk_common_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
jsk_footstep_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
jsk_footstep_msgs/action/: PlanFootsteps.action  PlanFootsteps.action.in
jsk_footstep_msgs/msg/: Footstep.msg  Footstep.msg.in
jsk_gui_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
jsk_gui_msgs/srv/: YesNo.srv
jsk_hark_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
jsk_visualization_msgs/: CMakeLists.txt  package.xml
jsk_visualization_msgs/msg/: Pictogram.msg  PictogramArray.msg  RecordCommand.msg  TransformableMarkerOperate.msg
jsk_visualization_msgs/srv/: RequestMarkerOperate.srv
posedetection_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
posedetection_msgs/include/posedetection_msgs/: feature0d_to_image.h  feature0d_to_image.hpp  feature0d_view.h  feature0d_view.hpp
posedetection_msgs/src/: feature0d_to_image.cpp  feature0d_to_image.ros1.cpp  feature0d_view.cpp  object_detection_aggregator.cpp
speech_recognition_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
speech_recognition_msgs/msg/: Grammar.msg  SentenceInfo.msg  SpeechRecognitionCandidates.msg  Vocabulary.msg  WordCategory.msg  WordInfo.msg
speech_recognition_msgs/srv/: SpeechRecognition.srv
