<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jsk_hark_msgs</name>
  <version>4.3.2</version>
  <description>jsk_hark_msgs</description>
  <maintainer email="s-fujii@jsk.t.u-tokyo.ac.jp">Shohei Fujii</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/jsk_hark_msgs</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="s-fujii@jsk.t.u-tokyo.ac.jp">Shohei Fujii</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
