<package>
  <name>jsk_visualization_msgs</name>
  <version>4.1.1</version>
  <description>Messages used in rviz/rqt plugins at JSK Lab.</description>
  <author email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</author>
  <maintainer email="wada@jsk.imi.i.u-tokyo.ac.jp">Kentaro Wada</maintainer>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/jsk_visualization_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
